PlzNavigate: non-user initiated navigations cancel renderer-initiated

This CL changes the navigation cancellation policy in PlzNavigate.
Following this CL, non-user initiated renderer-initiated navigations
will be able to cancel user-initiated renderer-initiated navigations.
They still won't be able to cancel browser-initiated navigations.

This fixes an issue where a window.Open followed by a submit form in the
same script does not result in the form being submitted.

BUG=755507

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I854d4cc16a8627dccf8bacd1fc5327e451bc451e
Reviewed-on: https://chromium-review.googlesource.com/616642
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: Camille Lamy <clamy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495139}
Former-commit-id: 6cbfad5930cd6c7b762318f72572d2472252f395