content/browser/frame_host/navigator_impl.cc
@@ -995,11 +995,10 @@ void NavigatorImpl::OnBeginNavigation(
   }
 
   // The renderer-initiated navigation request is ignored iff a) there is an
-  // ongoing request b) which is browser or user-initiated and c) the renderer
-  // request is not user-initiated.
+  // ongoing request b) which is browser initiated and c) the renderer request
+  // is not user-initiated.
   if (ongoing_navigation_request &&
-      (ongoing_navigation_request->browser_initiated() ||
-       ongoing_navigation_request->begin_params().has_user_gesture) &&
+      ongoing_navigation_request->browser_initiated() &&
       !begin_params.has_user_gesture) {
     RenderFrameHost* current_frame_host =
         frame_tree_node->render_manager()->current_frame_host();
